--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       <section id="controller" class="controller">
         <div id="div-btns-container" style="visibility:hidden" onMouseOver="btnShow('div-btns')" onMouseOut="btnHide('div-btns')">
           <div id="div-btns" class="div-btns" style="visibility:hidden">
-            <button id="microphone" class="btn btn-primary circle-btn" onclick="microphone()">
+            <button id="btn-microphone" class="btn btn-primary circle-btn" onclick="microphone()">
               <img class="img-btn-circle" src="assets/image/microphone.svg">
             </button>
-            <button id="camera" class="btn btn-primary circle-btn">
+            <button id="btn-camera" class="btn btn-primary circle-btn">
                 <img class="img-btn-circle" src="assets/image/camera.svg">
             </button>
-            <button id="lock" class="btn btn-primary circle-btn" onclick="lock()">
+            <button id="btn-lock" class="btn btn-primary circle-btn" onclick="lock()">
                 <img class="img-btn-circle" src="assets/image/lock.svg">
             </button>
-            <button id="sharescreen" class="btn btn-primary circle-btn" onclick="shareScreen()">
+            <button id="btn-sharescreen" class="btn btn-primary circle-btn" onclick="shareScreen()">
                 <img class="img-btn-circle" src="assets/image/screen.svg">
             </button>
           </div>
