--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button id="btn-microphone" class="btn btn-primary circle-btn" onclick="microphone()">
               <img class="img-btn-circle" src="assets/image/microphone.svg">
             </button>
-            <button id="btn-camera" class="btn btn-primary circle-btn">
+            <button id="btn-camera" class="btn btn-primary circle-btn" onclick="camera()">
                 <img class="img-btn-circle" src="assets/image/camera.svg">
             </button>
             <button id="btn-lock" class="btn btn-primary circle-btn" onclick="lock()">
