--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
               <img class="img-btn-circle" src="assets/image/microphone.svg">
             </button>
             <button id="btn-camera" class="btn btn-primary circle-btn" onclick="camera()">
-                <img class="img-btn-circle" src="assets/image/camera.svg">
+              <img class="img-btn-circle" src="assets/image/camera.svg">
             </button>
             <button id="btn-lock" class="btn btn-primary circle-btn" onclick="lock()">
-                <img class="img-btn-circle" src="assets/image/lock.svg">
+              <img class="img-btn-circle" src="assets/image/lock.svg">
             </button>
             <button id="btn-sharescreen" class="btn btn-primary circle-btn" onclick="shareScreen()">
-                <img class="img-btn-circle" src="assets/image/screen.svg">
+              <img class="img-btn-circle" src="assets/image/screen.svg">
+            </button>
+            <button id="btn-stop" class="btn btn-danger" onclick="stop()">
+              stop
             </button>
           </div>
         </div>
